name:              Dodgy
Build-Type:        Simple
cabal-version:     >= 1.2
version:           0.1
author:            Adam Cardenas
maintainer:        cevaris@gmail.com
category:          Graphics

extra-source-files:  readme.md

data-dir:   resources/textures
data-files: steel.jpg

executable Dodgy
    hs-source-dirs:  src
                     src/Dodgy
                     src/Objects
                     src/Levels
    main-is:         Dodgy.hs
    build-depends:   base,
                     GLUT,
                     OpenGLRaw,
                     GLUtil,
                     --gloss,
                     --tga,
                     split,
                     random,
                     fclabels
